# daily-nse-market-intel

./: DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: config.yaml
data/: baseline_symbols.csv  manual_aliases.csv  nse_symbol_master.csv  watchlist.txt
src/market_intel/: cli.py  config.py  pipeline.py
src/market_intel/fundamentals/: __init__.py  provider.py
src/market_intel/mailer/: smtp_mailer.py
src/market_intel/market_data/providers/: yfinance_provider.py
src/market_intel/news/: collector.py  dedup.py
src/market_intel/nlp/: entity_extractor.py  mapper.py
src/market_intel/reporting/: executive_brief.py  html_report.py
src/market_intel/scoring/: scorer.py
src/market_intel/sectors/: boom.py
src/market_intel/sentiment/: llm_model.py  vader_model.py
src/market_intel/storage/: __init__.py  db.py
src/market_intel/technicals/: indicators.py
src/market_intel/universe/: __init__.py  loader.py
src/market_intel/utils/: dates.py  http.py  text.py
tests/: test_smoke.py
